# git-profiles-cli

./: Cargo.toml  HOMEBREW_QUICKSTART.md  HOMEBREW_RELEASE.md  README.md  RELEASE_PROCESS.md  SNAP_RELEASE.md
.github/workflows/: build.yaml  publish-snap.yml  publish.yml  release.yml  update-homebrew-tap.yml
homebrew/: README.md  git-profiles-cli.rb
snap/: snapcraft.yaml
src/: config.rs  main.rs
