[package]
name = "git-profiles-cli"
version = "1.0.1"
edition = "2024"
authors = ["MikAoJk"]
description = "A CLI tool to switch between private and work user profiles"
license = "MIT"
repository = "https://github.com/MikAoJk/git-profiles-cli"
readme = "README.md"
keywords = ["cli", "git", "profiles"]

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
dirs = "6.0.0"
