[package]
name = "git-profiles-cli"
version = "1.0.3"
edition = "2024"
rust-version = "1.96.0"
authors = ["MikAoJk"]
description = "A CLI tool to switch between private and work user profiles"
license = "MIT"
repository = "https://github.com/MikAoJk/git-profiles-cli"
readme = "README.md"
keywords = ["cli", "git", "profiles"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0.0"
